[package]
name = "gcwd"
description = "Submit your Git commit with sepcific date."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'