[package]
name = "gcwd"
description = "Submit your Git commit with sepcific date."
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = "0.11"
self_update = { version = "0.39.0", features = ["archive-tar"] }
tempfile = "3.10.1"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
